JumpScript/tests/baselines/reference/cloduleWithDuplicateMember2.errors.txt
tests/cases/compiler/cloduleWithDuplicateMember2.jump(2,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/cloduleWithDuplicateMember2.jump(3,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/cloduleWithDuplicateMember2.jump(7,16): error TS2300: Duplicate identifier 'x'.
tests/cases/compiler/cloduleWithDuplicateMember2.jump(10,21): error TS2300: Duplicate identifier 'x'.


==== tests/cases/compiler/cloduleWithDuplicateMember2.jump (4 errors) ====
    class C {
        set x(y) { }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static set y(z) { }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    module C {
        export var x = 1;
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    module C {
        export function x() { }
                        ~
!!! error TS2300: Duplicate identifier 'x'.
    }